添加了功能并进行代码格式化
增加了功能小米解锁工具、ViQoo解锁工具，并进行代码格式化，同时对.gitignore配置进行优化

--- a/Toolbox/Toolbox/Toolbox.csproj
+++ b/Toolbox/Toolbox/Toolbox.csproj
@@ -84,7 +84,10 @@
 	<Content Include="lib\**">
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</Content>
-    <Content Include="Images\LargeTile.scale-100.png" />
+	<Content Include="unlock\vivo\**" />
+	<Content Include="unlock\xiaomi\**" />
+    
+	<Content Include="Images\LargeTile.scale-100.png" />
     <Content Include="Images\LargeTile.scale-125.png" />
     <Content Include="Images\LargeTile.scale-150.png" />
     <Content Include="Images\LargeTile.scale-200.png" />
@@ -164,5 +167,6 @@
 
   <ItemGroup>
     <Folder Include="lib\" />
+    <Folder Include="unlock\" />
   </ItemGroup>
 </Project>
