--- a/Toolbox/Toolbox/Toolbox.csproj
+++ b/Toolbox/Toolbox/Toolbox.csproj
@@ -89,6 +89,7 @@
     <None Remove="Images\Wide310x150Logo.scale-150.png" />
     <None Remove="Images\Wide310x150Logo.scale-200.png" />
     <None Remove="Images\Wide310x150Logo.scale-400.png" />
+    <None Remove="MindowsTool.xaml" />
     <None Remove="MoreFlash.xaml" />
     <None Remove="Rec_Reboot.xaml" />
     <None Remove="SettingsPage.xaml" />
@@ -162,6 +163,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="MindowsTool.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="MoreFlash.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
