--- a/Toolbox/Toolbox/Toolbox.csproj
+++ b/Toolbox/Toolbox/Toolbox.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
     <RootNamespace>Toolbox</RootNamespace>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -14,6 +14,7 @@
 	<PackageCertificateThumbprint>01967F530197B345594E64136D067091ED301799</PackageCertificateThumbprint>
 	<PackageCertificateKeyFile>Toolbox_TemporaryKey.pfx</PackageCertificateKeyFile>
 	<AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+	<DefaultLanguage>zh-cn</DefaultLanguage>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <NoWarn>SYSLIB0011, SYSLIB0011</NoWarn>
@@ -102,8 +103,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230502000" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231115000" />
+    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
     <Manifest Include="$(ApplicationManifest)" />
   </ItemGroup>
 
@@ -111,6 +112,9 @@
 	<Content Include="lib\**">
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</Content>
+	<Content Include="fonts\OppoSans.ttf">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
 	<Content Include="unlock\vivo\**" />
 	<Content Include="unlock\xiaomi\**" />
     
